apps/wikijs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wikijs-allow-cloudflared
  namespace: wikijs
spec:
  podSelector:
    matchLabels:
      app: wikijs

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflared
          podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - protocol: TCP
          port: 3000
